@@ -3,7 +3,7 @@
 {% block titletag %}{% blocktrans %}Editing {{ setting_type_name}} - {{ instance }}{% endblocktrans %}{% endblock %}
 {% block bodyclass %}menu-settings{% endblock %}
 {% block content %}
-    <header class="nice-padding">
+    <header class="nice-padding {% if tabbed %}merged tab-merged{% endif %}">
         <div class="row">
             <div class="left">
                 <div class="col">
