@@ -30,6 +30,8 @@ def get_model_from_url_params(app_name, model_name):
 
 @lru_cache()
 def get_setting_edit_handler(model):
+    if hasattr(model, 'edit_handler'):
+        return model.edit_handler.bind_to_model(model)
     panels = extract_panel_definitions_from_model_class(model, ['site'])
     return ObjectList(panels).bind_to_model(model)
 
@@ -87,4 +89,5 @@ def edit(request, app_name, model_name, site_pk):
         'form': form,
         'site': site,
         'site_switcher': site_switcher,
+        'tabbed': edit_handler_class.__name__ == '_TabbedInterface',
     })
